manifests/seraphim/prod/sonarr/Deployment-sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: sonarr
    app.kubernetes.io/name: sonarr
    app.kubernetes.io/part-of: sonarr
    app.kubernetes.io/version: 4.0.17
  name: sonarr
  namespace: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: sonarr
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/component: main
        app.kubernetes.io/instance: sonarr
        app.kubernetes.io/name: sonarr
        app.kubernetes.io/part-of: sonarr
        app.kubernetes.io/version: 4.0.17
    spec:
      containers:
        - env:
            - name: SONARR__AUTH__METHOD
              value: External
          image: ghcr.io/home-operations/sonarr:4.0.17
          name: sonarr
          ports:
            - containerPort: 8989
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /mnt/media
              name: media
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsUser: 1000
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: config
        - name: media
          nfs:
            path: /mnt/nami-01/media
            readOnly: false
            server: nami.int.scarey.me
