manifests/seraphim/prod/sonarr/Service-oauth2-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: authentication-proxy
    app.kubernetes.io/instance: oauth2-proxy-sonarr
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/part-of: sonarr
    app.kubernetes.io/version: v7.14.3
  name: oauth2-proxy
  namespace: sonarr
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/name: oauth2-proxy
